--- a/alt.fedoraproject.org/data/content/index.html
+++ b/alt.fedoraproject.org/data/content/index.html
@@ -25,6 +25,43 @@
     </div>
   </header>
 
+  <!-- News -->
+  <py:choose>
+    <py:when test="global_variables.release['curr_state'] == 'Alpha'">
+      <div class="newsbox">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12 text-center index">
+              <h3>${Markup(_('&lt;strong&gt;Fedora %(rel)s %(state)s&lt;/strong&gt; released! &lt;a href="%(link)s"&gt;Test it now >&lt;/a&gt;')) % {'rel':global_variables.release['next_id'], 'state':global_variables.release['curr_state'], 'link':'prerelease/index.html'}}</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+    </py:when>
+    <py:when test="global_variables.release['curr_state'] == 'Beta'">
+      <div class="jumbotron newsbox">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12 text-center index">
+              <h3>${Markup(_('&lt;strong&gt;Fedora %(rel)s %(state)s&lt;/strong&gt; released! &lt;a href="%(link)s"&gt;Test it now >&lt;/a&gt;')) % {'rel':global_variables.release['next_id'], 'state':global_variables.release['curr_state'], 'link':'prerelease/index.html'}}</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+    </py:when>
+    <py:otherwise>
+      <div class="jumbotron newsbox">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12 text-center index">
+              <h3>${Markup(_('Fedora %(rel)s released! Get it now.')) % {'rel':global_variables.release['curr_id']}}</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+    </py:otherwise>
+  </py:choose>
+
   <!-- Network Installers -->
   <div class="jumbotron main-head hidden-xs hidden-sm">
     <div class="container using">
