--- a/getfedora.org/data/content/atomic/prerelease/index.html
+++ b/getfedora.org/data/content/atomic/prerelease/index.html
@@ -70,7 +70,7 @@
             <h5 class="bold">${_('GP2 Format')}</h5>
             <p>${_('GP2 format AMIs use faster SSD storage; use these AMIs for speed, although note your storage costs will be more than standard.')}</p>
             <!-- Modal for EC2 Cloud GP2 Base HVM Instances -->
-            <button type="button" class="btn btn-success btn-fix download-cloud-splash" data-toggle="modal" data-target=".GP2-atomic-mobile-EC2">${_('GP2 HVM AMIs')}</button>
+            <button type="button" class="btn btn-success btn-fix" data-toggle="modal" data-target=".GP2-atomic-mobile-EC2">${_('GP2 HVM AMIs')}</button>
             <div class="modal fade GP2-atomic-mobile-EC2" tabindex="-1" role="dialog" aria-hidden="true">
               <div class="modal-dialog modal-cloud">
                 <div class="modal-content">
@@ -102,7 +102,7 @@
             <h5 class="bold">${_('Standard Format)')}</h5>
             <p>${_('Standard format AMIs are more suitable if you have infrequently accessed data and want to keep storage cost low.')}</p>
             <!-- Modal for EC2 Cloud standard Base HVM Instances -->
-            <button type="button" class="btn btn-success btn-fix download-cloud-splash" data-toggle="modal" data-target=".atomic-mobile-EC2">${_('Standard HVM AMIs')}</button>
+            <button type="button" class="btn btn-success btn-fix" data-toggle="modal" data-target=".atomic-mobile-EC2">${_('Standard HVM AMIs')}</button>
             <div class="modal fade atomic-mobile-EC2" tabindex="-1" role="dialog" aria-hidden="true">
               <div class="modal-dialog modal-cloud">
                 <div class="modal-content">
@@ -146,7 +146,7 @@
         <div class="row hidden-xs">
           <div class="col-sm-6">
             <!-- Modal for EC2 GP2 Cloud Base HVM Instances -->
-            <button type="button" class="btn btn-success btn-fix download-cloud-splash" data-toggle="modal" data-target=".GP2-atomic-EC2">${_('GP2 HVM AMIs')}</button>
+            <button type="button" class="btn btn-success btn-fix" data-toggle="modal" data-target=".GP2-atomic-EC2">${_('GP2 HVM AMIs')}</button>
             <div class="modal fade GP2-atomic-EC2" tabindex="-1" role="dialog" aria-hidden="true">
               <div class="modal-dialog modal-cloud">
                 <div class="modal-content">
@@ -176,7 +176,7 @@
           </div>
           <div class="col-sm-6">
             <!-- Modal for EC2 Standard Cloud Base HVM Instances -->
-            <button type="button" class="btn btn-success btn-fix download-cloud-splash" data-toggle="modal" data-target=".atomic-EC2">${_('Standard HVM AMIs')}</button>
+            <button type="button" class="btn btn-success btn-fix" data-toggle="modal" data-target=".atomic-EC2">${_('Standard HVM AMIs')}</button>
             <div class="modal fade atomic-EC2" tabindex="-1" role="dialog" aria-hidden="true">
               <div class="modal-dialog modal-cloud">
                 <div class="modal-content">
@@ -223,13 +223,13 @@
 	              <div class="col-xs-12">
 	                <h5 class="bold">${_('VirtualBox Image')}</h5>
 	                <p>${_('If you\'re using Vagrant on Mac OS X or Windows, this is likely the image you\'ll want to use.')}</p>
-	                <a class="btn btn-success btn-fix download-cloud download-cloud-splash" href="${global_variables.release['atomic_VBvag_cloud_url']}" role="button">${_('Download')}</a>
+	                <a class="btn btn-success btn-fix download-cloud" href="${global_variables.release['atomic_VBvag_cloud_url']}" role="button">${_('Download')}</a>
 	                  <p class="caption">${_('64-bit %sMB VirtualBox Base Vagrant Image') % global_variables.iso_size['pre_atomic_VBvag_cloud']}</p>
 	              </div>
 	              <div class="col-xs-12">
 	                <h5 class="bold">${_('libvirt/KVM Image')}</h5>
 	                <p>${_('If you\'re using Vagrant on Fedora, this is the image you\'ll want to use.')}</p>
-	                <a class="btn btn-success btn-fix download-cloud download-cloud-splash" href="${global_variables.release['atomic_libvag_cloud_url']}" role="button">${_('Download')}</a>
+	                <a class="btn btn-success btn-fix download-cloud" href="${global_variables.release['atomic_libvag_cloud_url']}" role="button">${_('Download')}</a>
 	                  <p class="caption">${_('64-bit %sMB libvirt/KVM Base Vagrant Image') % global_variables.iso_size['pre_atomic_libvag_cloud']}</p>
 	              </div>
 	            </div>
@@ -247,11 +247,11 @@
 	            </div>
 	            <div class="row hidden-xs">
 	              <div class="col-sm-6">
-	                <a class="btn btn-success btn-fix download-cloud download-cloud-splash" href="${global_variables.release['atomic_VBvag_cloud_url']}" role="button">${_('Download')}</a>
+	                <a class="btn btn-success btn-fix download-cloud" href="${global_variables.release['atomic_VBvag_cloud_url']}" role="button">${_('Download')}</a>
 	                  <p class="caption">${_('64-bit %sMB VirtualBox Base Vagrant Image') % global_variables.iso_size['pre_atomic_VBvag_cloud']}</p>
 	              </div>
 	              <div class="col-sm-6">
-	                <a class="btn btn-success btn-fix download-cloud download-cloud-splash" href="${global_variables.release['atomic_libvag_cloud_url']}" role="button">${_('Download')}</a>
+	                <a class="btn btn-success btn-fix download-cloud" href="${global_variables.release['atomic_libvag_cloud_url']}" role="button">${_('Download')}</a>
 	                  <p class="caption">${_('64-bit %sMB libvirt/KVM Base Vagrant Image') % global_variables.iso_size['pre_atomic_libvag_cloud']}</p>
 	              </div>
 	            </div>
@@ -292,13 +292,13 @@
 		          <div class="col-xs-12">
 		            <h5 class="bold">${_('qcow2 Image')}</h5>
 		            <p>${Markup(_('This is Fedora %(rel)s %(state)s Cloud Atomic Host in a Qcow2-formatted image for use with OpenStack.')) % {'rel':global_variables.release['next_atomic_id'], 'state':global_variables.release['curr_atomic_state']}}</p>
-		            <a class="btn btn-success download-cloud-splash" href="${global_variables.release['atomic_qcow2_cloud_url']}" role="button">${_('Download')}</a>
+		            <a class="btn btn-success" href="${global_variables.release['atomic_qcow2_cloud_url']}" role="button">${_('Download')}</a>
 		              <p class="caption">${_('64-bit %sMB Qcow2 Image') % global_variables.iso_size['pre_atomic_qcow2_cloud']}</p>
 		          </div>
 		          <div class="col-xs-12">
 		            <h5 class="bold">${_('Raw Image')}</h5>
 		            <p>${Markup(_('This is Fedora %(rel)s %(state)s Cloud Atomic Host in a compressed raw image format. If you\'re not sure what to use, try this.')) % {'rel':global_variables.release['next_atomic_id'], 'state':global_variables.release['curr_atomic_state']}}</p>
-		            <a class="btn btn-success download-cloud-splash" href="${global_variables.release['atomic_raw_cloud_url']}" role="button">${_('Download')}</a>
+		            <a class="btn btn-success" href="${global_variables.release['atomic_raw_cloud_url']}" role="button">${_('Download')}</a>
 		              <p class="caption">${_('64-bit %sMB xz-Compressed Raw Image') % global_variables.iso_size['pre_atomic_raw_cloud']}</p>
 		          </div>
 		      </div>
@@ -315,11 +315,11 @@
 		      </div>
 		      <div class="row hidden-xs">
 		          <div class="col-sm-6">
-		            <a class="btn btn-success download-cloud-splash" href="${global_variables.release['atomic_qcow2_cloud_url']}" role="button">${_('Download')}</a>
+		            <a class="btn btn-success" href="${global_variables.release['atomic_qcow2_cloud_url']}" role="button">${_('Download')}</a>
 		              <p class="caption">${_('64-bit %sMB Qcow2 Image') % global_variables.iso_size['pre_atomic_qcow2_cloud']}</p>
 		          </div>
 		          <div class="col-sm-6">
-		            <a class="btn btn-success download-cloud-splash" href="${global_variables.release['atomic_raw_cloud_url']}" role="button">${_('Download')}</a>
+		            <a class="btn btn-success" href="${global_variables.release['atomic_raw_cloud_url']}" role="button">${_('Download')}</a>
 		              <p class="caption">${_('64-bit %sMB xz-Compressed Raw Image') % global_variables.iso_size['pre_atomic_raw_cloud']}</p>
 		          </div>
 		      </div>
