--- a/arm.fedoraproject.org/data/content/index.html
+++ b/arm.fedoraproject.org/data/content/index.html
@@ -11,6 +11,43 @@
 <body class="home">
 <xi:include href="../templates/head.html" />
 
+  <!-- News -->
+  <py:choose>
+    <py:when test="global_variables.release['curr_state'] == 'Alpha'">
+      <div class="newsbox">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12 text-center index">
+              <h3>${Markup(_('&lt;strong&gt;Fedora %(rel)s %(state)s&lt;/strong&gt; released! &lt;a href="%(link)s"&gt;Test it now >&lt;/a&gt;')) % {'rel':global_variables.release['next_id'], 'state':global_variables.release['curr_state'], 'link':'prerelease.html'}}</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+    </py:when>
+    <py:when test="global_variables.release['curr_state'] == 'Beta'">
+      <div class="jumbotron newsbox">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12 text-center index">
+              <h3>${Markup(_('&lt;strong&gt;Fedora %(rel)s %(state)s&lt;/strong&gt; released! &lt;a href="%(link)s"&gt;Test it now >&lt;/a&gt;')) % {'rel':global_variables.release['next_id'], 'state':global_variables.release['curr_state'], 'link':'prerelease.html'}}</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+    </py:when>
+    <py:otherwise>
+      <div class="jumbotron newsbox">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12 text-center index">
+              <h3>${Markup(_('Fedora %(rel)s released! Get it now.')) % {'rel':global_variables.release['curr_id']}}</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+    </py:otherwise>
+  </py:choose>
+
   <!-- Servers -->
   <div class="jumbotron main-head hidden-xs hidden-sm">
     <div class="container using">
@@ -434,43 +471,6 @@
       </div>
     </div>
   </div>
-
-<!-- News -->
-      <py:choose>
-        <py:when test="global_variables.release['curr_state'] == 'Alpha'">
-          <div class="newsbox">
-            <div class="container">
-              <div class="row">
-                <div class="col-xs-12 text-center">
-                  <h3>${Markup(_('Fedora %(rel)s %(state)s released! &lt;a href="%(link)s"&gt;Try it now >&lt;/a&gt;')) % {'rel':global_variables.release['next_id'], 'state':global_variables.release['curr_state'], 'link':'prerelease.html'}}</h3>
-                </div>
-              </div>
-            </div>
-          </div>
-        </py:when>
-        <py:when test="global_variables.release['curr_state'] == 'Beta'">
-          <div class="jumbotron newsbox">
-            <div class="container">
-              <div class="row">
-                <div class="col-xs-12 text-center">
-                  <h3>${Markup(_('Fedora %(rel)s %(state)s released! &lt;a href="%(link)s"&gt;Try it now >&lt;/a&gt;')) % {'rel':global_variables.release['next_id'], 'state':global_variables.release['curr_state'], 'link':'prerelease.html'}}</h3>
-                </div>
-              </div>
-            </div>
-          </div>
-        </py:when>
-        <py:otherwise>
-          <div class="jumbotron newsbox">
-            <div class="container">
-              <div class="row">
-                <div class="col-xs-12 text-center">
-                  <h3>${Markup(_('Fedora %(rel)s released! Try it now.')) % {'rel':global_variables.release['curr_id']}}</h3>
-                </div>
-              </div>
-            </div>
-          </div>
-        </py:otherwise>
-      </py:choose>
 
 </body>
 </html>
