#632 add icons ppc64 and ppc64le

--- a/alt.fedoraproject.org/data/content/prerelease/index.html
+++ b/alt.fedoraproject.org/data/content/prerelease/index.html
@@ -308,13 +308,13 @@
             <div class="panel-heading">
               <h3 class="panel-title hidden-xs">
                 <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
-                <img src="/static/images/ppc.png" />
+                <img src="/static/images/ppc64.png" />
                 ${Markup(_('PowerPC Architecture (PPC64)'))}
                 </a>
               </h3>
               <h3 class="panel-title visible-xs">
                 <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
-                <img src="/static/images/ppc.png" />
+                <img src="/static/images/ppc64.png" />
                 ${Markup(_('PPC64'))}
                 </a>
               </h3>
@@ -393,13 +393,13 @@
             <div class="panel-heading">
               <h3 class="panel-title hidden-xs">
                 <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
-                <img src="/static/images/ppc.png" />
+                <img src="/static/images/ppc64le.png" />
                 ${Markup(_('PowerPC Architecture (PPC64LE)'))}
                 </a>
               </h3>
               <h3 class="panel-title visible-xs">
                 <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
-                <img src="/static/images/ppc.png" />
+                <img src="/static/images/ppc64le.png" />
                 ${Markup(_('PPC64LE'))}
                 </a>
               </h3>
@@ -478,13 +478,13 @@
             <div class="panel-heading">
               <h3 class="panel-title hidden-xs">
                 <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseFour">
-                <img src="/static/images/ppc.png" />
+                <img src="/static/images/s390x.png" />
                 ${Markup(_('s390x Architecture'))}
                 </a>
               </h3>
               <h3 class="panel-title visible-xs">
                 <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseFour">
-                <img src="/static/images/ppc.png" />
+                <img src="/static/images/s390x.png" />
                 ${Markup(_('s390x'))}
                 </a>
               </h3>
