quick POC of the flock site

--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -14,35 +14,16 @@
   	  <div class="container">
         <div class="row">
           <div class="col-xs-12 col-md-8 col-md-offset-2">
-            <div class="alert alert-info" role="alert">
-              <strong>Talks at Flock are not being livestreamed</strong> due to bandwidth constraints.
-              All talks are being recorded, and will uploaded soon. However, <strong>some talks are being transcribed live in IRC</strong>,
-              check the <a href="#comms">IRC info below</a> for more information on the channels for a specific room
-            </div>
-            <p>
-              Welcome to Flock 2016 in Krakow! Now in its fourth year, Flock is a fun and productive
-              event which brings the Fedora community together to discuss new ideas — and to put
-              those ideas into practice in hackfests and workshops.
-            </p>
-            <br/>
-          </div>
-          <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
-          <img src="${path}/static/images/index/coverimage.png" width="100%"/>
-          </div>
-          <div class="col-xs-12 col-md-8 col-md-offset-2">
             <br/>
             <p>
-              <small><strong>Attendance at Flock is free and open to all.</strong> Pre-registration is closed but
-              anyone is still welcome to attend. However, unregistered attendees may miss out on swag
-              or the evening events as these are booked based on pre-registration. If you did pre-register, can view
-              your information on the <a href="https://register.flocktofedora.org/">registration page.</a></small>
+              <img src="${path}/static/images/capecod-logo.png" />
             </p>
           </div>
         </div>
   	  </div>
     </div>
 
-    <div id="schedule" class="non-jumbo blue text-center">
+    <div id="schedule" class="non-jumbo text-center">
       <div class="container">
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
@@ -62,7 +43,7 @@
     </div>
     </div>
 
-    <div id="comms" class="non-jumbo text-center">
+    <div id="comms" class="non-jumbo blue text-center">
       <div class="container">
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
@@ -100,7 +81,7 @@
     </div>
     </div>
 
-    <div id="transport" class="non-jumbo blue text-center">
+    <div id="transport" class="non-jumbo text-center">
       <div class="container">
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
@@ -114,7 +95,7 @@
     </div>
     </div>
 
-    <div id="venue" class="non-jumbo text-center">
+    <div id="venue" class="non-jumbo blue text-center">
       <div class="container">
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
@@ -131,7 +112,7 @@ GPS: 50.090900, 19.914500 | N 50°05'27.2" E 19°54'52.2"
     </div>
     </div>
 
-    <div id="events" class="non-jumbo blue text-center">
+    <div id="events" class="non-jumbo text-center">
       <div class="container">
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
@@ -188,7 +169,7 @@ GPS: 50.090900, 19.914500 | N 50°05'27.2" E 19°54'52.2"
     </div>
     </div>
 
-    <div id="sponsors" class="non-jumbo text-center">
+    <div id="sponsors" class="non-jumbo blue text-center">
       <div class="container">
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
@@ -221,7 +202,7 @@ GPS: 50.090900, 19.914500 | N 50°05'27.2" E 19°54'52.2"
     </div>
     </div>
 
-    <div id="photos" class="non-jumbo blue text-center">
+    <div id="photos" class="non-jumbo text-center">
       <div class="container">
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
