add LXQt arm image section

--- a/arm.fedoraproject.org/data/content/prerelease.html
+++ b/arm.fedoraproject.org/data/content/prerelease.html
@@ -148,6 +148,24 @@
          </div>
          <div class="col-xs-12 white">
             <div class="col-xs-3 col-sm-1 text-center">
+              <img class="img-responsive" src="/static/images/lxqt.png" alt="LXQt" />
+            </div>
+            <div class="col-sm-3 hidden-xs">
+            <h3>${_('LXQt Desktop')}</h3>
+            </div>
+            <div class="col-sm-3 hidden-xs">
+            <p>${Markup(_('%sMB raw image')) % global_variables.iso_size['pre_ARM_LXQt']}</p>
+            </div>
+            <div class="col-sm-5 hidden-xs">
+            <p class="download"><a href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Spins/armhfp/images/Fedora-LXQt-armhfp-${global_variables.release['next_arm_id']}_${global_variables.release['curr_arm_state']}-${global_variables.release['RC_pre_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="${path}/static/checksums/Fedora-Spins-${global_variables.release['next_arm_id']}_${global_variables.release['curr_arm_state']}-${global_variables.release['RC_pre_gold']}-armhfp-CHECKSUM">${_('Verify')}</a></p>
+            </div>
+            <div class="col-xs-9 visible-xs">
+            <h3>${_('LXQt Desktop')}</h3>
+            <p class="download"><a href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Spins/armhfp/images/Fedora-LXQt-armhfp-${global_variables.release['next_arm_id']}_${global_variables.release['curr_arm_state']}-${global_variables.release['RC_pre_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="${path}/static/checksums/Fedora-Spins-${global_variables.release['next_arm_id']}_${global_variables.release['curr_arm_state']}-${global_variables.release['RC_pre_gold']}-armhfp-CHECKSUM">${_('Verify')}</a></p>
+          </div>
+         </div>
+         <div class="col-xs-12 white">
+            <div class="col-xs-3 col-sm-1 text-center">
               <img class="img-responsive" src="/static/images/mate.png" alt="MATE-Compiz" />
             </div>
             <div class="col-sm-3 hidden-xs">
